[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tower_pink.png" type="Texture" id=1]
[ext_resource path="res://scripts/tower.gd" type="Script" id=2]
[ext_resource path="res://assets/bullet_pink_shadow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="tower" type="Node2D" groups=["tower"]]
script = ExtResource( 2 )
tower = ExtResource( 1 )
bullet_texture = ExtResource( 3 )
speed = 2

[node name="head" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
centered = false

[node name="sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
position = Vector2( 17, 14 )
shape = SubResource( 1 )

[node name="shoot" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="area_entered" from="sight" to="." method="_on_sight_area_entered"]
[connection signal="area_exited" from="sight" to="." method="_on_sight_area_exited"]
[connection signal="timeout" from="shoot" to="." method="_on_shoot_timeout"]
